--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,29 @@
+version: '3.9'
+
 services:
-  web:
+  app:
     build: .
-    container_name: agro_app
+    container_name: agree_app
+    restart: always
     ports:
       - "5000:5000"
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/agro_db
-    volumes:
-      - .:/app
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/agree_db
+    depends_on:
+      - db
 
   db:
     image: postgres:15
-    container_name: agro_postgres
+    container_name: agree_postgres
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: agro_db
+      POSTGRES_DB: agree_db
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
-      interval: 3s
-      timeout: 3s
-      retries: 5
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: agro_pgadmin
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "5050:80"
-    depends_on:
-      - db
 
 volumes:
   postgres_data:
