--- a/k8s/postgres-service.yaml
+++ b/k8s/postgres-service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
-  namespace: agro
+  name: agree-postgres
 spec:
-  type: ClusterIP
+  selector:
+    app: agree-postgres
   ports:
   - port: 5432
     targetPort: 5432
-  selector:
-    app: postgres
+  type: ClusterIP
