--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -1,22 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: agree-app
+  name: agreeculture-app
+  namespace: agro
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: agree-app
+      app: agreeculture-app
   template:
     metadata:
       labels:
-        app: agree-app
+        app: agreeculture-app
     spec:
       containers:
-      - name: agree-app
-        image: iscomarcuz/agreeculture-app:latest
-        ports:
-        - containerPort: 5000
-        env:
-        - name: DATABASE_URL
-          value: "postgresql://postgres:postgres@agree-postgres:5432/agree_db"
+        - name: agreeculture-app
+          image: iscomarcuz/agreeculture-app:latest
+          ports:
+            - containerPort: 5000
