--- a/k8s/app-service.yaml
+++ b/k8s/app-service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: agree-app
+  name: agreeculture-service
+  namespace: agro
 spec:
   selector:
-    app: agree-app
+    app: agreeculture-app
   ports:
-  - port: 5000
-    targetPort: 5000
+    - protocol: TCP
+      port: 5000
+      targetPort: 5000
   type: ClusterIP
