--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,17 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: agro-ingress
+  name: agreeculture-ingress
   namespace: agro
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-  - host: agro.local
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: agro-app
-            port:
-              number: 5000
+    - host: agree.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: agreeculture-service
+                port:
+                  number: 5000
