--- a/k8s/postgres-secret.yaml
+++ b/k8s/postgres-secret.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
-kind: Secret
+kind: Service
 metadata:
-  name: postgres-secret
-  namespace: agro
-type: Opaque
-data:
-  POSTGRES_USER: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: cG9zdGdyZXM=
-  POSTGRES_DB: YWdyb19kYg==
+  name: agree-postgres
+spec:
+  selector:
+    app: agree-postgres
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
+  type: ClusterIP
